--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <main>
     <h2> What is Unga?   </h2>
     <p> Unga bunga is banana nana potato</p>
-    <img src="ungabonk">
+    <img src="ungabonk.jpg">
     <p> Unga and Bonks</p>
 
     <!-- Bonks -->
